--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "dotenv": "^10.0.0",
     "eslint": "^7.29.0",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.7"
   }
 }
