--- a/service/Dockerfile
+++ b/service/Dockerfile
@@ -1,2 +1,13 @@
 FROM node:14.17-alpine
-WORKDIR /
+
+RUN mkdir -p /src/app
+
+WORKDIR /src/app
+
+COPY . /src/app
+
+RUN npm install
+
+EXPOSE 3000
+
+CMD ["npm", "run", "start"]
