--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,44 +1,38 @@
 version: '3'
 services:
-  server1:
+   server1:
     build: service/
-    depends_on:
-      - 'database'
     ports:
       - "3001:3000"
 
-  # server2:
-  #   build: service/
-  #   ports:
-  #     - "3002:3000"
+   server2:
+     build: service/
+     ports:
+       - "3002:3000"
 
-  # server3:
-  #   build: service/
-  #   depends_on:
-  #     - 'database'
-  #   ports:
-  #     - "3003:3000"
+   server3:
+     build: service/
+     ports:
+       - "3003:3000"
 
-  # server4:
-  #   build: service/
-  #   depends_on:
-  #     - 'database'
-  #   ports:
-  #     - "3004:3000"
+   server4:
+     build: service/
+     ports:
+       - "3004:3000"
 
-  database:
-    image: mongo:4.4.6
-    restart: always
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: example
+   loader:
+     build: loader/
+     ports:
+       - "8080:80"
+     depends_on:
+       - server1
+       - server2
+       - server3
+       - server4
 
-  # loader:
-  #   build: loader/
-  #   ports:
-  #     - "8080:80"
-  #   depends_on:
-  #     - server_one
-  #     - server_two
-  #     - server_three
-  #     - server_four
+  # database:
+  #   image: mongo:4.4.6
+  #   restart: always
+  #   environment:
+  #     MONGO_INITDB_ROOT_USERNAME: root
+  #     MONGO_INITDB_ROOT_PASSWORD: example
