--- a/loader/nginx.conf
+++ b/loader/nginx.conf
@@ -1,8 +1,8 @@
-  upstream load {
-    server TBD;
-    server TBD;
-    server TBD;
-    server TBD;
+upstream loader {
+    server 54.193.167.21:3001;
+    server 54.193.167.21:3002;
+    server 54.193.167.21:3003;
+    server 54.193.167.21:3004;
   }
   server {
     location / {
