--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -69,3 +69,43 @@ services:
       volumes:
         - /etc/localtime:/etc/localtime:ro
         - /mongo_cluster/data3:/data/db
+
+      mongors2n1:
+        container_name: mongors2n1
+        image: mongo
+        command: mongod --shardsvr --replSet mongors2 --dbpath /data/db --port 27017
+        ports:
+          - 27047:27017
+        expose:
+          - "27017"
+        environment:
+          TERM: xterm
+        volumes:
+          - /etc/localtime:/etc/localtime:ro
+          - /mongo_cluster/data4:/data/db
+      mongors2n2:
+        container_name: mongors2n2
+        image: mongo
+        command: mongod --shardsvr --replSet mongors2 --dbpath /data/db --port 27017
+        ports:
+          - 27057:27017
+        expose:
+          - "27017"
+        environment:
+          TERM: xterm
+        volumes:
+          - /etc/localtime:/etc/localtime:ro
+          - /mongo_cluster/data5:/data/db
+      mongors2n3:
+        container_name: mongors2n3
+        image: mongo
+        command: mongod --shardsvr --replSet mongors2 --dbpath /data/db --port 27017
+        ports:
+          - 27067:27017
+        expose:
+          - "27017"
+        environment:
+          TERM: xterm
+        volumes:
+          - /etc/localtime:/etc/localtime:ro
+          - /mongo_cluster/data6:/data/db
